--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>This is my first GIT Website</h1>
+    <p>V2: This is my first update!</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed at facere quod, eius ratione natus veritatis autem
         rerum repellat est in nam voluptate voluptatem blanditiis. A quasi repudiandae officiis debitis?</p>
 
