Added Style Sheet, nav bar

--- a/index.html
+++ b/index.html
@@ -5,14 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GIT Wesite</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Roboto&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>Javascript Introduction</title>
+    <script src="app.js"></script>
 </head>
 
 <body>
-    <h1>This is my first GIT Website</h1>
-    <p>V2: This is my first update!</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed at facere quod, eius ratione natus veritatis autem
-        rerum repellat est in nam voluptate voluptatem blanditiis. A quasi repudiandae officiis debitis?</p>
+    <header>
+        <div id="page-logo">
+            <a href="/index.html">Jeff Bustraan</a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="bio">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic recusandae ipsam quod tempora magni nostrum
+                exercitationem doloremque totam deserunt, alias voluptatem, eum aut, aliquam magnam a aspernatur
+                quisquam et amet!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab molestias quae recusandae ut, eligendi quod
+                optio nemo, quasi cupiditate maxime, est enim explicabo eos voluptatibus. Blanditiis quis quidem unde
+                laboriosam.</p>
+        </section>
+    </main>
+    <section id="bottom">
+        <div class="sample-items">
+            <h2>See examples of some of my work</h2>
+            <ul>
+                <li>News</li>
+                <li>Sports</li>
+                <li>Weddings</li>
+            </ul>
+        </div>
+
+    </section>
 
 </body>
 
